# vocal-sibilance

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: build.yml  release.yml
docs/superpowers/plans/: 2026-06-10-vocal-sibilance.md
docs/superpowers/specs/: 2026-06-10-vocal-sibilance-design.md
packaging/: installer-info.txt  make-installer-art.ps1  make-macos-pkg.sh  windows-installer.iss
presets/: BrightVocal.xml  Gentle.xml  GrittyPop.xml  MaximumCharacter.xml  Standard.xml  TameHarshMic.xml
src/: PluginProcessor.cpp  PluginProcessor.h
src/dsp/: CrossoverBands.cpp  CrossoverBands.h  DspUtils.h  GainComputer.cpp  GainComputer.h  GritShaper.cpp  GritShaper.h  SibilanceDetector.cpp  SibilanceDetector.h  SibilanceEngine.cpp  SibilanceEngine.h
src/state/: PresetManager.cpp  PresetManager.h  SpectrumFifo.h
src/ui/: HeaderBar.cpp  HeaderBar.h  PluginEditor.cpp  PluginEditor.h  PorcelainKnob.h  PorcelainLookAndFeel.cpp  PorcelainLookAndFeel.h  RainBackground.h  SibilanceDisplay.cpp  SibilanceDisplay.h
tests/: CrossoverBandsTests.cpp  GainComputerTests.cpp  GritShaperTests.cpp  ProcessorTests.cpp  SanityTests.cpp  SibilanceDetectorTests.cpp  SibilanceEngineTests.cpp
